# transfer-learning-for-football-AI

./: .gitignore  README.md  REFACTORING_PLAN.md  create_spadl_dataset.ipynb  create_spadl_dataset_league_season.ipynb  process_statsbomb_data.ipynb  pyproject.toml  recovery.md  requirements.txt  socceraction_supervised_learning.ipynb  socceraction_supervised_learning_simple.ipynb
.github/: copilot-instructions.md
.github/tasks/: refactor_input_features.md  refactor_splitting.md  (+2 more)
archive/: README.md
configs/: create_feat_engineered_vaep.yaml  create_spadl_dataset.yaml  create_vaep_features.yaml  train_sklearn.yaml  train_xgboost.yaml  train_xgboost_full.yaml  tune_xgboost.yaml  xgboost_fewshots.yaml  xgboost_fewshots_all.yaml
notebooks/: covariate shift.ipynb  create_spadl_dataset.ipynb  create_spadl_dataset_league_season.ipynb  create_spadl_dataset_major_leagues.ipynb  create_spadl_dataset_women_league_season.ipynb  prior-concept shift.ipynb  process_statsbomb_data.ipynb  socceraction_supervised_learning.ipynb  socceraction_supervised_learning_simple.ipynb
scripts/: create_datasets.py  create_feat_engineered_vaep.py  create_spadl_dataset.py  create_spadl_rich_leagues.py  create_vaep_features.py  eda.py  eda_styles.py  eval_xgboost_target.py  train.py  train_xgboost.py  tune_xgboost.py  tune_xgboost_bayes_v2.py  xgboost-fewshots.py  xgboost_fewshots.py
tests/: test_resolve_random_state.py  test_smoke_data_viz.py  test_smoke_library.py  test_smoke_train.py  test_smoke_vaep_features.py  test_train_xgboost_script.py  test_tune_xgboost_script.py
(+12 files in other folders)
