[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-ai"
version = "0.1.0"
description = "Utilities and scripts for StatsBomb SPADL/VAEP dataset creation."
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
